--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,8 +6,9 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>Lasagna Recipe</h1>
 
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <img src="images/lasagna.jpeg" alt="Lasagna Picture">
+
   </body>
 </html>
