images/lasagna.jpg

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,21 @@
   <body>
     <h1>Lasagna Recipe</h1>
 
-    <img src="images/lasagna.jpeg" alt="Lasagna Picture">
+    <img src="../images/lasagna.jpg" alt="Lasagna Picture">
 
+    <h2>Easy and Delicious Lasagna</h2>
+
+    <p>This is all you need to start cooking delicious lasagna for your whole family. This recipe is easy, quick, and has plenty of leftovers. There are only 4 major steps!</p>
+
+    <ul>
+        <li>16 ounces of lasagna noodles</li>
+        <li>1 lb of lean ground beef</li>
+        <li>salt and pepper to taste</li>
+        <li>16 ounces of spaghetti sauce</li>
+        <li>1 clove of minced garlic</li>
+        <li>1/2 lb of shredded mozarella cheese</li>
+        <li>1/2 lb of shredded cheddar cheese</li>
+        <li>1 pint of ricotta cheese</li>
+    </ul>
   </body>
 </html>
