--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -24,5 +24,12 @@
         <li>1/2 lb of shredded cheddar cheese</li>
         <li>1 pint of ricotta cheese</li>
     </ul>
+
+    <ol>
+        <li>Bring a large port of lightly salted water to a boil. Add pasta and cook for 8-10 minutes. Drain water afterwards.</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper: drain. Stir in spaghettic sauce iand garlic and simmer 5 minutes.</li>
+        <li>In a medium bowl, combine mozzarella, cheddarr and ricotta: stir well. In 9 x 13 inch pan, alternate layers of noodles, meat mixutre, and cheese mixture until pn is filled.</li>
+        <li>Bake in peheated oven for 30 minutes, or until cheese is melted.</li>
+    </ol>
   </body>
 </html>
