--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Odin Recipes</h1>
 
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/pbj.html">PBJ Recipes</a>
+    <a href="recipes/sandwich.html">Sanwich Recipes</a>
   </body>
 </html>
