--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <title>My First Webpage</title>
     <meta charset="UTF-8">
   </head>
-
   <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="recipes/pbj.html">PBJ Recipes</a>
-    <a href="recipes/sandwich.html">Sanwich Recipes</a>
+    #Add Image Here
+    <h2>Recipe List:</h2>
+      <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/pbj.html">PBJ Recipes</a></li>
+        <li><a href="recipes/sandwich.html">Sandwich Recipes</a></li>
+      </ul>
   </body>
 </html>
