--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -15,21 +15,20 @@
     <p>Are you ready to earn your first Michelin Star? This dish transcends all cultures and tastes buds. The ultimate sandwich.</p>
 
     <ul>
-        <li>16 ounces of lasagna noodles</li>
-        <li>1 lb of lean ground beef</li>
-        <li>salt and pepper to taste</li>
-        <li>16 ounces of spaghetti sauce</li>
-        <li>1 clove of minced garlic</li>
-        <li>1/2 lb of shredded mozarella cheese</li>
-        <li>1/2 lb of shredded cheddar cheese</li>
-        <li>1 pint of ricotta cheese</li>
+        <li>2 slices of white bread</li>
+        <li>1 jar of peanut butter</li>
+        <li>1 jar of jelly</li>
+        <li>2 ozs of love</li>
+        <li>10 cups of hardwork</li>
+        <li>15 years of experience</li>
     </ul>
 
     <ol>
-        <li>Bring a large port of lightly salted water to a boil. Add pasta and cook for 8-10 minutes. Drain water afterwards.</li>
-        <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper: drain. Stir in spaghettic sauce iand garlic and simmer 5 minutes.</li>
-        <li>In a medium bowl, combine mozzarella, cheddarr and ricotta: stir well. In 9 x 13 inch pan, alternate layers of noodles, meat mixutre, and cheese mixture until pn is filled.</li>
-        <li>Bake in peheated oven for 30 minutes, or until cheese is melted.</li>
+        <li>Pick up your bag of white bread and then proceed to open the top of the cover. Then pull out 2 slices of bread.</li>
+        <li>Place your slices of bread on a cutting board or plate. Grab your jar of peanut butter and then twist of the cap. Grab a butter knife with the other hand and then remove as much peanut butter to taste. Transfer the peanut butter from the knife to a side of bread.</li>
+        <li>Grab a jar of jelly with one hand and then remove the cap with your other hand. Once the cap is removed, place the cap down, grab a butter knife with your free hand, and grab jelly from the tip of your knife. Generously apply the jelly to the other slice of bread that does not have peanut butter.</li>
+        <li>Put down the jar of jelly. Now grab both slices of bread and put them on top of each other with the jelly and peanut butter side touching each other.</li>
+        <li>You now have a completed peanut butter and jelly sandwich. Take a bite and feel proud!</li>
     </ol>
   </body>
 </html>
