--- a/recipes/pbj.html
+++ b/recipes/pbj.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Peanut Butter and Jelly Recipe</h1>
 
-    <img src="../images/pbj.jpg" alt="Lasagna Picture">
+    <img src="../images/pbj.jpg" alt="PBJ Picture">
 
     <h2>The Most Difficult Dish in the World</h2>
 
