--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -15,14 +15,14 @@
     <p>The ultimate classic. Just make sure you make it right. Turkey can be dry at times.</p>
 
     <ul>
-        <li>16 ounces of lasagna noodles</li>
-        <li>1 lb of lean ground beef</li>
-        <li>salt and pepper to taste</li>
-        <li>16 ounces of spaghetti sauce</li>
-        <li>1 clove of minced garlic</li>
-        <li>1/2 lb of shredded mozarella cheese</li>
-        <li>1/2 lb of shredded cheddar cheese</li>
-        <li>1 pint of ricotta cheese</li>
+        <li>2 slices of white or wheat bread</li>
+        <li>2-4 pieces of sliced turkey breast</li>
+        <li>mayonaise</li>
+        <li>2 leaves of lettuce</li>
+        <li>(optional) 3 pieces of bacon</li>
+        <li>2 pieces of your choice of cheese</li>
+        <li>1 Hell's Kitchen contestant</li>
+        <li>1 world renowned british chef</li>
     </ul>
 
     <ol>
