--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -26,10 +26,10 @@
     </ul>
 
     <ol>
-        <li>Bring a large port of lightly salted water to a boil. Add pasta and cook for 8-10 minutes. Drain water afterwards.</li>
-        <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper: drain. Stir in spaghettic sauce iand garlic and simmer 5 minutes.</li>
-        <li>In a medium bowl, combine mozzarella, cheddarr and ricotta: stir well. In 9 x 13 inch pan, alternate layers of noodles, meat mixutre, and cheese mixture until pn is filled.</li>
-        <li>Bake in peheated oven for 30 minutes, or until cheese is melted.</li>
+        <li>Take two slices of bread and apply mayonaise to one end</li>
+        <li>Slice 2 pieces of tomato and start pan frying your bacon if you choose to have bacon</li>
+        <li>Place your meat, cheese, tomato slices, and lettuce pieces on the side with mayonaise.</li>
+        <li>Apply bacon on top and then add the other piece of bread.</li>
     </ol>
   </body>
 </html>
