--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="./images/helloworldjoke.jpg" alt="Front Page Picture">
+    <img src="./images/helloworldjoke.jpg" alt="Front Page Picture" class="center">
     <h2>Recipe List:</h2>
       <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
